--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         </div>
         
         <div class="pad">
-            <div class="touch">7</div>
-            <div class="touch">8</div>
-            <div class="touch">9</div>
-            <div class="touch">÷</div>
+            <div class="touch" value="7" >7</div>
+            <div class="touch" value="8" >8</div>
+            <div class="touch" value="9" >9</div>
+            <div class="touch" value="/" >÷</div>
 
-            <div class="touch">4</div>
-            <div class="touch">5</div>
-            <div class="touch">6</div>
-            <div class="touch">×</div>
+            <div class="touch" value="4" >4</div>
+            <div class="touch" value="5" >5</div>
+            <div class="touch" value="6" >6</div>
+            <div class="touch" value="*" >×</div>
 
-            <div class="touch">1</div>
-            <div class="touch">2</div>
-            <div class="touch">3</div>
-            <div class="touch">−</div>
+            <div class="touch" value="1">1</div>
+            <div class="touch" value="2">2</div>
+            <div class="touch" value="3">3</div>
+            <div class="touch" value="-">−</div>
 
-            <div class="touch">0</div>
-            <div class="touch">.</div>
-            <div class="touch">=</div>
-            <div class="touch">+</div>
+            <div class="touch" value="0">0</div>
+            <div class="touch" value=".">.</div>
+            <div class="touch" value="=">=</div>
+            <div class="touch" value="+">+</div>
         </div>
     </div>
 </body>
